--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
-//    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
+    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
 //    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
 
     implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
