--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
-    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
+//    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
 //    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
 
     implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.0'
-
+    implementation "zendesk.messaging:messaging-android:2.31.0"
 
 }
