--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -50,6 +52,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
 //    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
