--- a/android/build.gradle
+++ b/android/build.gradle
@@ -60,6 +60,6 @@ dependencies {
     implementation group: 'com.zendesk', name: 'support', version: '5.4.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation "zendesk.messaging:messaging-android:2.31.0"
+//    implementation "zendesk.messaging:messaging-android:2.31.0"
 
 }
