--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
-        coreLibraryDesugaringEnabled = true
+//        coreLibraryDesugaringEnabled = true
     }
 
     kotlinOptions {
@@ -51,13 +51,13 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
+//    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
 //    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
 //    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
 
-    implementation group: 'com.zendesk', name: 'support', version: '5.4.0'
+    implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.0'
 //    implementation "zendesk.messaging:messaging-android:2.31.0"
