--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 //    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
-//    implementation group: 'com.zendesk', name: 'messaging', version: '5.3.0'
+    implementation group: 'com.zendesk', name: 'messaging', version: '5.1.2'
 //    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
 
     implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
