--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,12 +54,11 @@ dependencies {
 //    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
 //    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
-    implementation group: 'com.zendesk', name: 'messaging', version: '5.1.2'
+//    implementation group: 'com.zendesk', name: 'messaging', version: '5.1.2'
 //    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
 
     implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.0'
-//    implementation "zendesk.messaging:messaging-android:2.31.0"
-
+    implementation "zendesk.messaging:messaging-android:2.26.1"
 }
