--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
-//        coreLibraryDesugaringEnabled = true
+        coreLibraryDesugaringEnabled = true
     }
 
     kotlinOptions {
