--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-//        maven { url 'https://zendesk.jfrog.io/zendesk/repo' }
+        maven { url 'https://zendesk.jfrog.io/zendesk/repo' }
         maven { url 'https://zendesk.jfrog.io/artifactory/repo' }
     }
 }
@@ -52,10 +52,10 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 //    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
-
-//    implementation group: 'com.zendesk', name: 'chat', version: '3.3.7'
-//    implementation group: 'com.zendesk', name: 'messaging', version: '5.1.2'
-//    implementation group: 'com.zendesk', name: 'chat-providers', version: '3.3.7'
+    api group: 'com.zendesk', name: 'messaging', version: '5.6.0'
+    api group: 'com.zendesk', name: 'support', version: '5.4.0'
+    api group: 'com.zendesk', name: 'answerbot', version: '3.3.2'
+    api group: 'com.zendesk', name: 'chat', version: '3.6.0'
 
 //    implementation group: 'com.zendesk', name: 'support', version: '5.1.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -63,5 +63,5 @@ dependencies {
 //    implementation "zendesk.messaging:messaging-android:2.26.1"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
-    implementation 'zendesk.messaging:messaging-android:2.31.0'
+//    implementation 'zendesk.messaging:messaging-android:2.31.0'
 }
